[package]
name          = "iter_from_closure"
version       = "1.0.0"

description   = "Iterator<Item = Item> from FnMut() -> Option<Item>"
keywords      = ["iterator", "closure"]
categories    = ["rust-patterns"]

authors       = ["Mazdak Farrokhzad <twingoow@gmail.com>"]
license       = "MIT/Apache-2.0"
repository    = "https://github.com/Centril/iter_from_closure"
documentation = "https://docs.rs/iter_from_closure/"

[dependencies]